
version 0.4.1 (cvs)

	Buf Fixes
	- Bug #1168421 crash when opening specific contacts
	
version 0.4.0 (2005-03-18)

	- installed header file names have changed to now have a "mw_"
	prefix

	Features
	- RFE #994716 Support for Server-side Groups to Aware Service
	- RFE #1077794 NotesBuddy style formatting
	- Support for resolve service

	Bug Fixes
	- Bug #1008335 Error in common.c when compiling on x86_64
	- Bug #1021353 meanwhile won't build w/Sun GNOME2
	- Bug #1036056 meanwhile-CRITICAL - when add a buddy to my list
	- Bug #1089971 pkg-config file does not list liner flags
	- Bug #1110902 configure shouldn't set CFLAGS
	- Dumb crash when removing non-existant members from an aware list
	
version 0.3.1 (2004-08-05)

	- Fix [989872] Version incompatibility (0x80000200 errors)
	- Fix some st_list parsing problems

version 0.3.0 (2004-06-28)
		
	2004-06-27: Fixed bug #980572. Thanks a lot to Joe Marcus Clarke
	for all the debugging help!

	* common.c: privacy list has a name in it, who knew?

	* st_list.c: revamped the parsing and generation of sametime's
	buddy list format. Seems to be working alright, but there can be
	some serious ugliness with commas in user ids and in aliases.
	
	2004-06-23: Sametime blist format parser/generator seems to be
	working.

	* common.c: fixed a nasty crash/bug discovered by nosnilmot. Base
	type serialization wasn't correctly checking available buffer
	lengths, leading to unhealthy overruns. Won't happen anymore.
	
	* srvc_aware.c: fixed nasty bug in removing entries from a list
	which made the whole service unstable.

	* st_list.c, st_list.h: added to CVS. Simple API for loading and
	storing a heirarchy of group/users into a sametime format list.
	
	2004-06-21: Bug fix and API cleanup.

	* service.c, service.h: refinements to service start/stop and
	state checking
	
	* srvc_im.c: fixed a reported bug where messages were not being
	rejected even when the user was in mwStatus_BUSY. Thanks jdob!
	